# prenotazioni_scuola_project

./: .dockerignore  .env.example  .gitignore  ADMIN_CREATION_CHANGES.md  ADMIN_CREATION_SUMMARY.md  ADMIN_SECURITY_ALLINONE.md  ADMIN_SECURITY_GUIDE.md  ADVANCED_SECURITY_OPTIONS.md  ANALISI  ANALISI_DATABASE_STRUTTURA.md  COMPLETAMENTO_EMAIL_ADMIN.md  CONFIGURAZIONE_EMAIL_RENDER.md  CSV_FIRST_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_FIX_COMPLETE.md  DEPLOY_FIX_REPORT.md  DEPLOY_REPORT.md  DEPLOY_SECURITY_CHECKLIST.md  DEPLOY_SOLUTION_FINAL.md  DEPLOY_SUCCESS_ENHANCED.md  DEPLOY_SUCCESS_REPORT.md  Dockerfile  EMAIL_TROUBLESHOOTING.md  FINAL_DEPLOY_SOLUTION.md  FIX_APPLICATI_POST_CORREZIONI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_FINAL.md  ISTRUZIONI_IMPLEMENTAZIONE_FINALE.md  ISTRUZIONI_SOLUZIONE_IMMEDIATA.md  KEEP_ALIVE.md  LICENSE  MODIFICHE_EMAIL_ADMIN.md  Makefile  PROBLEMA_RISOLTO_MIGRAZIONE_COMPLETA.md  PROBLEMI_TROVATI_POST_CORREZIONI.md  PROGRESSO_POSITIVO_SOLUZIONE_AVANZATA.md  Procfile  RAPPORTO_CRITICO_DATABASE.md  README.md  (+45 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  django.yml
backend/: __init__.py  manage.py
backend/config/: __init__.py  settings.py  urls.py  views.py  views_email_login.py  views_login.py  wsgi.py
backend/prenotazioni/: admin.py  forms.py  models.py  services.py  urls.py  views.py
backups/: scuole_index.json  serializers_corrected.py.bak
config/: __init__.py  asgi.py  brevo_client.py  settings.py  settings_new.py  urls.py  views.py  views_email_login.py  views_login.py
prenotazioni/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  passwords.py  serializers.py  serializers_corrected.py  services.py  tasks.py  urls.py  views.py  wizard_security.py
scripts/: inspect_index.py  run-dev.sh  run-in-docker.sh  upgrade_deps.ps1
(+83 files in other folders)
