[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prenotazioni-scuola"
version = "1.0.0"
description = "Sistema di prenotazioni scolastiche con API REST"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Sistema Prenotazioni Scolastiche", email = "admin@isufol.it"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=5.1,<6",
    "djangorestframework>=3.15.2",
    "django-filter>=25.1",
    "django-cors-headers>=4.5.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.3.0",
    "django-redis>=5.4.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.7.0",
    "python-dotenv>=1.0.1",
    "django-extensions>=3.2.3",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.2",
]

[project.urls]
Homepage = "https://github.com/nicovoni/prenotazioni_scuola_project"
Repository = "https://github.com/nicovoni/prenotazioni_scuola_project"

[tool.django]
settings_module = "config.settings"
apps = ["config", "prenotazioni"]

[tool.setuptools]
packages = ["config", "prenotazioni"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/**/*", "static/**/*"]
